# cpputils

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO.md
.cache/clangd/index/: algo.cpp.F08ECFE577461AF7.idx  algo.h.B3C06FC54508B38D.idx  canvas.cpp.7735F52BB138C4AD.idx  canvas.h.7CFB4A0AE562915F.idx  canvas_func.cpp.3671640A12A1FBD6.idx  canvas_func.h.518F3A852AB5AC21.idx  color.cpp.9EC8A1B6AD3266AD.idx  color.h.6BD844F5DC9110F7.idx  color_gradient.cpp.94DC8B75EC857979.idx  image.cpp.135C12883F586743.idx  image.h.4A7A3D533815CFAF.idx  imageio.cpp.EC60B785D6AADC19.idx  imageio.h.482D61BDE0DD6864.idx  io_gif.cpp.59A6BBE5D1B1CC2A.idx  io_gif.h.249E19B2959FE1A0.idx  io_jpeg.cpp.F5137574B3D5478E.idx  io_jpeg.h.FA2E48ACD92608AA.idx  io_png.cpp.9DFAA977EA404477.idx  io_png.h.078A7353D5F46513.idx  math.cpp.F96F5F420BE78D85.idx  math.h.439E97CD84BEF7C7.idx  test.cpp.0809CEBC0BE1477F.idx  test.cpp.0A8964299CEA0B21.idx  test.cpp.1198F2B067A81E01.idx  test.cpp.2E4C8F1D746FD247.idx  test.cpp.345562138EECA170.idx  test.cpp.502375E16508F3D1.idx  test.cpp.51A17DDEFE4B9CD8.idx  test.cpp.54297C1944B10D0F.idx  test.cpp.5A6603CA4EB8A6A4.idx  test.cpp.64819C809FE29A00.idx  test.cpp.7185DA54592BC174.idx  test.cpp.7AAAED4EF0A3C848.idx  test.cpp.7D42E9EE2F496639.idx  test.cpp.897039FEF7623079.idx  test.cpp.94F39587E3E5B238.idx  test.cpp.9887681D4BD968EA.idx  test.cpp.B54A661E8BD2CCCE.idx  test.cpp.B9DF9A6A7F897418.idx  test.cpp.BADBCA38398EDFFE.idx  (+11 more)
benchmarks/: CMakeLists.txt
benchmarks/polygon_clip/: CMakeLists.txt  test.cpp
cpputils/: CMakeLists.txt  algo.cpp  algo.h  canvas.cpp  canvas.h  canvas_func.cpp  canvas_func.h  color.cpp  color.h  image.cpp  image.h  imageio.cpp  imageio.h  io_gif.cpp  io_gif.h  io_jpeg.cpp  io_png.cpp  io_png.h  math.cpp  math.h  type.h
include/spes/: algo.h  canvas.h  canvas_func.h  color.h  image.h  imageio.h  io_gif.h  io_jpeg.h  io_png.h  math.h  type.h  utils.h
prac/: CMakeLists.txt
prac/ahe/: CMakeLists.txt  test.cpp
prac/clahe/: CMakeLists.txt  test.cpp
prac/clhe/: CMakeLists.txt  test.cpp
prac/clip/: CMakeLists.txt  test.cpp
prac/cui_im/: CMakeLists.txt  test.cpp
prac/he/: CMakeLists.txt  test.cpp
prac/heatmap/: CMakeLists.txt  heatmap.org  hm.conf  src.cpp
prac/heatmap/gm/: CMakeLists.txt  src.cpp
prac/heatmap/rt/: CMakeLists.txt  antv.conf  rainbow.conf  red.conf  src.cpp  three.conf
prac/img_pro/: CMakeLists.txt  test.cpp
prac/jpeg/: CMakeLists.txt  test.cpp
prac/png_stats/: CMakeLists.txt  test.cpp
prac/poly_clip/: CMakeLists.txt  CMakeLists.txt~  test.cpp
prac/sh_gl/: CMakeLists.txt  test.cpp
prac/topo_sort/: CMakeLists.txt  test.cpp
prac/wa_gl/: CMakeLists.txt  test.cpp
src/: CMakeLists.txt  algo.cpp  canvas.cpp  canvas_func.cpp  color.cpp  color_gradient.cpp  image.cpp  imageio.cpp  io_gif.cpp  io_jpeg.cpp  io_png.cpp  math.cpp  type.cpp  utils.cpp
tests/: CMakeLists.txt
tests/algo/: CMakeLists.txt  test.cpp
tests/canvas/: CMakeLists.txt  test.cpp
tests/color/: test.cpp
tests/effects/: CMakeLists.txt  test.cpp
tests/image/: CMakeLists.txt  test.cpp
tests/imageio/: CMakeLists.txt  test.cpp
tests/math/: CMakeLists.txt  test.cpp
tests/memfile/: CMakeLists.txt  test.cpp
tests/mw/: CMakeLists.txt  test.cpp
tests/type/: test.cpp
tests/utils/: CMakeLists.txt  test.cpp
tests/wa/: CMakeLists.txt  test.cpp
unit_tests/: CMakeCache.txt  CMakeLists.txt
unit_tests/algo/: CMakeLists.txt  test.cpp
unit_tests/color/: CMakeLists.txt  test.cpp
unit_tests/math/: CMakeLists.txt  test.cpp
unit_tests/type/: CMakeLists.txt
unit_tests/utils/: CMakeLists.txt
